# mcp-ecu

./: .gitignore  Dockerfile  README.md  can-mcp.py  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  simulate-ecus.py  vehicle.dbc
.github/workflows/: ci.yml  release.yml
docker/: compose.yml
scripts/: start-demo.ps1
src/mcp_can/: bus.py  cli.py  config.py  dbc.py  models.py  obd.py
src/mcp_can/server/: fastmcp_server.py
src/mcp_can/simulator/: profiles.py  runner.py
tests/: test_cli.py  test_dbc.py  test_decode_roundtrip.py  test_server_app.py
